--- a/Mappy/Mappy/Base.lproj/Main.storyboard
+++ b/Mappy/Mappy/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Detailed event header" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bnd-OB-cCb">
-                                <rect key="frame" x="10" y="20" width="394" height="42"/>
+                                <rect key="frame" x="10" y="50" width="394" height="42"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -78,30 +78,43 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Xdx-A8-N4G">
-                                <rect key="frame" x="20" y="72" width="374" height="187"/>
+                                <rect key="frame" x="20" y="102" width="374" height="187"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="Xdx-A8-N4G" secondAttribute="height" multiplier="2:1" id="lmo-hv-bcs"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xzz-bR-hVb">
-                                <rect key="frame" x="10" y="269" width="394" height="79"/>
+                                <rect key="frame" x="10" y="299" width="394" height="49"/>
                                 <state key="normal" title="Get there"/>
                                 <connections>
                                     <action selector="getThereClicked:" destination="Fic-Oe-IJ3" eventType="touchUpInside" id="7eX-Az-tsp"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xzw-KH-fui">
+                                <rect key="frame" x="384" y="10" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="xzw-KH-fui" secondAttribute="height" multiplier="1:1" id="iRa-wL-RCn"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="1"/>
+                                <state key="normal" image="x.circle.fill" catalog="system"/>
+                                <connections>
+                                    <action selector="closeButton:" destination="Fic-Oe-IJ3" eventType="touchUpInside" id="t5E-5K-IkG"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="Ojx-7h-9YH" firstAttribute="top" secondItem="Xzz-bR-hVb" secondAttribute="bottom" constant="10" id="4BP-cL-RU9"/>
+                            <constraint firstItem="5Tj-Js-52m" firstAttribute="trailing" secondItem="xzw-KH-fui" secondAttribute="trailing" constant="10" id="7ZB-m0-YuT"/>
                             <constraint firstItem="Xzz-bR-hVb" firstAttribute="leading" secondItem="5Tj-Js-52m" secondAttribute="leading" constant="10" id="Bed-bB-1Xa"/>
                             <constraint firstItem="Xdx-A8-N4G" firstAttribute="leading" secondItem="5Tj-Js-52m" secondAttribute="leading" constant="20" id="Ber-qf-5Py"/>
                             <constraint firstItem="Bnd-OB-cCb" firstAttribute="leading" secondItem="5Tj-Js-52m" secondAttribute="leading" constant="10" id="CNm-mH-xPL"/>
                             <constraint firstItem="5Tj-Js-52m" firstAttribute="trailing" secondItem="Xzz-bR-hVb" secondAttribute="trailing" constant="10" id="Dqq-bt-bfJ"/>
                             <constraint firstItem="Xzz-bR-hVb" firstAttribute="top" secondItem="Xdx-A8-N4G" secondAttribute="bottom" constant="10" id="LuK-V6-EGN"/>
-                            <constraint firstItem="Bnd-OB-cCb" firstAttribute="top" secondItem="5Tj-Js-52m" secondAttribute="top" constant="20" id="MOL-sX-baI"/>
+                            <constraint firstItem="Bnd-OB-cCb" firstAttribute="top" secondItem="5Tj-Js-52m" secondAttribute="top" constant="50" id="MOL-sX-baI"/>
                             <constraint firstItem="5Tj-Js-52m" firstAttribute="trailing" secondItem="Xdx-A8-N4G" secondAttribute="trailing" constant="20" id="QAN-A9-iqS"/>
                             <constraint firstItem="5Tj-Js-52m" firstAttribute="trailing" secondItem="Bnd-OB-cCb" secondAttribute="trailing" constant="10" id="VpS-j7-Wz4"/>
+                            <constraint firstItem="xzw-KH-fui" firstAttribute="top" secondItem="5Tj-Js-52m" secondAttribute="top" constant="10" id="bV4-2V-lqZ"/>
                             <constraint firstItem="Xdx-A8-N4G" firstAttribute="top" secondItem="Bnd-OB-cCb" secondAttribute="bottom" constant="10" id="dX2-BW-KBG"/>
                             <constraint firstItem="5Tj-Js-52m" firstAttribute="trailing" secondItem="Ojx-7h-9YH" secondAttribute="trailing" constant="20" id="fci-eX-UpT"/>
                             <constraint firstItem="Ojx-7h-9YH" firstAttribute="leading" secondItem="5Tj-Js-52m" secondAttribute="leading" constant="20" id="nPr-5G-9ew"/>
@@ -171,5 +184,6 @@
         <image name="book" catalog="system" width="64" height="50"/>
         <image name="location.fill" catalog="system" width="64" height="56"/>
         <image name="map" catalog="system" width="64" height="56"/>
+        <image name="x.circle.fill" catalog="system" width="64" height="60"/>
     </resources>
 </document>
